[tool.poetry]
name = "smad-labs"
version = "0.1.0"
description = ""
authors = ["Egor_Pyshny <egorpyshny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
